--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,9 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
+    <main>
+      <include src="./partials/contact.html"></include>
+    </main>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
