--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
+    <include src="./partials/about-us.html"></include>
     <include src="./partials/reviews.html"></include>
   </body>
 </html>
