--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <main>
+      <include src="./partials/program.html"></include>
       <include src="./partials/reviews.html"></include>
       <include src="./partials/contact.html"></include>
     </main>
